add responsive skills page from Diyorbek branch

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     </p>
                     <a class="btn btn__card" href="#">Learn more</a>
                 </div>
+
                 <div class="cards">
                     <div class="card writing">
                         <img src="./images/Typewriter-bro 1.png" alt="Shared goals bro">
@@ -34,13 +35,16 @@
                     </div>
                     <div class="card speaking">
                         <img src="./images/House bookshelves-bro 1.png" alt="Shared goals bro">
-                        <h2>Speaking</h2>
+                        <div class="speaking__text">
+                            <h2>Speaking</h2>
                         <p>
                             perception and response actions of the user
                             resulting from the use and/or upcoming use 
                             of the product, system or service
                         </p>
                         <a class="btn btn__speaking" href="#">Learn more</a>
+                        </div>
+                        
                     </div>
                     <div class="card listening">
                         <img src="./images/Podcast audience-bro 1.png" alt="Shared goals bro">
@@ -55,6 +59,42 @@
                         </div>
                         
                     </div>
+                </div>
+
+                <!-- *-*-*-* CARD MOBILE *-*-*-* -->
+                <div class="card card__mobile">
+                    <img src="./images/Typewriter-bro 1.png" alt="Shared goals bro">
+                    <h2>Writing</h2>
+                    <p>
+                        One of the most important
+                        and extensive areas of 
+                        natural science, the science
+                        that studies substances, 
+                        also their composition 
+                    </p>
+                    <a class="btn btn__card" href="#">Learn more</a>
+                </div>
+                <div class="card card__mobile">
+                    <img src="./images/House bookshelves-bro 1.png" alt="Shared goals bro">
+                    <h2>Reading</h2>
+                    <p>
+                        Perception and response
+                        actions of the user resulting
+                        from the use and/or up
+                        coming use of the product, 
+                        system or service
+                    </p>
+                    <a class="btn btn__card" href="#">Learn more</a>
+                </div>
+                <div class="card card__mobile">
+                    <img src="./images/Podcast audience-bro 1.png" alt="Shared goals bro">
+                    <h2>Listening</h2>
+                    <p>
+                        Here you can find activities 
+                        to practise your listening skills. Listening will help you to
+                        improve your understanding 
+                    </p>
+                    <a class="btn btn__card" href="#">Learn more</a>
                 </div>
             </div>
         </div>
