--- a/index.html
+++ b/index.html
@@ -1,15 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Mulish:wght@300;400;500;600;700;800;900&family=Noto+Sans:wght@200;300;400;500;600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,500&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
     <title>6-dars</title>
 </head>
+
 <body>
     <div class="container">
 
+        <!-- header start -->
+
+        <div class="header__cards">
+            <img src="./assets/images/logo.svg" width="106" height="46" alt="">
+            <ul class="header__cards--list">
+                <li class="header__cards--list--li"> <a class="header__cards--list--a" href="#">Home</a></li>
+                <li class="header__cards--list--li"> <a class="header__cards--list--a" href="#">Skills</a></li>
+                <li class="header__cards--list--li"> <a class="header__cards--list--a" href="#">About Us</a></li>
+                <li class="header__cards--list--li"> <a class="header__cards--list--a" href="#">Pricing</a></li>
+                <li class="header__cards--list--li"> <a class="header__cards--list--a" href="#"> Contacts</a></li>
+            </ul>
+            <button class="header__cards--button">Let’s Talk</button>
+            <button class="hamburger"><i class='bx bx-menu-alt-left' undefined ></i></button>
+        </div>
+
+        <!-- header end -->
+
+        <!-- hero start -->
+        <div class="hero__cards">
+            <div class="hero__cards--left">
+                <h1 class="hero__cards--left--h1">Learn Any Foreign Language</h1>
+                <p class="hero__cards--left--p">With our teachers who write a program for
+                    each student, you will be able to make your
+                    first sketch after the first lesson.</p>
+                <button class="hero__cards--button">Get started</button>
+            </div>
+            <img src="./assets/images/hero__cards.svg" width="798" height="571" alt="">
+        </div>
+        <!-- hero end -->
+
+        <!-- footer start -->
+        <div class="footer">
+            <img src="./assets/images/logo.svg" width="106" height="46" alt="">
+            <ul class="footer__card"> 
+                <li class="footer__card-li"><a class="footer__card--a" href="#">Terms and Conditions • Privacy Policy • Cookie Policy</a></li>
+            </ul>
+        </div>
+        <!-- footer end  -->
     </div>
-    
+
 </body>
+
 </html>
