--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Mulish:wght@300;400;500;600;700;800;900&family=Noto+Sans:wght@200;300;400;500;600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,500&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>6-dars</title>
 </head>
 
@@ -29,7 +30,7 @@
             <li class="header__cards--list--li"> <a class="header__cards--list--a" href="#"> Contacts</a></li>
         </ul>
         <button class="header__cards--button">Let’s Talk</button>
-        <button class="hamburger"><i class='bx bx-menu-alt-left' undefined ></i></button>
+        <button class="hamburger"><i class='bx bx-menu-alt-left' ></i></button>
     </div>
 
     <!-- header end -->
@@ -43,7 +44,8 @@
                 first sketch after the first lesson.</p>
             <button class="hero__cards--button">Get started</button>
         </div>
-        <img src="./assets/images/hero__cards.svg" width="798" height="571" alt="">
+        <img class="hero__cards--right--image" src="./assets/images/hero__cards.svg"  alt="">
+        <img class="hero__cards--right--image--mobile" src="./assets/images/hero_card_mobile.svg"  alt="">
     </div>
     <!-- hero end -->
 
@@ -151,5 +153,5 @@
 </div>
 
 </body>
-
+<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </html>
